Small fixes to the riot_tv anchor

--- a/anchor/views/index.html
+++ b/anchor/views/index.html
@@ -31,6 +31,7 @@
 	 	  <input type="text" id="colorset-color" name="color" value="#fff" />
 	 	  <button>Set</button>
 	 	</div>
+	 	<button>Sidebar</button>
         </div>
         
         
