Major Riot-TV update, added virutal terminal to browser view

--- a/anchor/root/css/base.css
+++ b/anchor/root/css/base.css
@@ -7,10 +7,21 @@ body {
 	font-size: 11px;
 }
 
-#head {
-	
-	
+img {
+	margin: 0;
+	border: 0;
+	padding: 0;
 }
+
+/* Page Header ***********************************************************************************/
+#layout-head {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	height: 100px;	
+}
+
 #head img {
 	float: left;
 }
@@ -19,11 +30,86 @@ body {
 	float: right;
 }
 
+/* Page Main Window ******************************************************************************/
+#layout-cont {
+}
 #tvscreen {
 	position: absolute;
 	top: 100px;
 	left: 0;
-	bottom: 30px;
+	bottom: 50px;
 	right: 0;
 	background-color: #101010;
+}
+
+
+/* Page footer ***********************************************************************************/
+#layout-foot {
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	height: 50px;
+}
+
+#logo-bar {
+	margin: 5px;
+	height: 40px;
+	background-color: #ffffff;
+}
+
+#layout-foot img {
+	height: 34px;
+	padding: 3px 10px 0 0;
+}
+
+#console-showhide {
+	height: 42px; width: 40px;
+	margin: 4px;
+	float: right;
+	background-color: #555555;
+	cursor: pointer;
+}
+#console-showhide.show {
+	background-image: url("../img/expand_arrow_40.png");
+}
+#console-showhide.hide {
+	background-image: url("../img/collapse_arrow_40.png");
+}
+
+/* Console ***************************************************************************************/
+#console {
+	display: none;
+	position: absolute;
+	bottom: 50px;
+	right: 20px;
+	width: 900px; height:500px;
+	border-radius: 5px 5px 0 0;
+	opacity: 0.85;
+	background-color: #333333;
+}
+
+#console-inner {
+	padding: 5px;
+}
+
+#console-output {
+	border: 0;
+	width: 100%;
+	height: 400px;
+	color: #eeeeee;
+	background-color: #111111;
+	font-size: 10px;
+	font-family: "Lucida Console", Monaco, monospace;	
+}
+
+#console-input {
+	width: 600px;
+	border: 0;
+	padding: 5px 10px;
+	color: #eeeeee;
+	background-color: #111111;
+	font-size: 10px;
+	font-family: "Lucida Console", Monaco, monospace;	
+
 }
