Finished the virtual console, yeehaa

--- a/anchor/views/index.html
+++ b/anchor/views/index.html
@@ -35,13 +35,12 @@
         </div>
         -->
         
-        <h2>RIOT TV:</h2>
+        <h2>RIOT TV</h2>
       </div>
 
 
       <div id="layout-cont">
         <div id="tvscreen"></div>
-        testme
       </div>
 
 
@@ -62,11 +61,14 @@
 
       <div id="console">
         <div id="console-inner">
-          <textarea id="console-output"></textarea>
-          Node 1<input id="console-node-1" type="checkbox" />
-          Node 2<input id="console-node-2" type="checkbox" />
-          <input id="console-input" type="text" />
-          <button id="console-send" value="Send" />
+          <div id="console-sidebar">
+            Select Nodes to communicate with:
+          </div>
+          <div id="console-mainbar">
+            <textarea id="console-output"></textarea>
+            <input id="console-input" type="text" />
+            <button id="console-send" value="Send" />
+          </div>
         </div>
       </div>
 
