--- a/anchor/root/css/base.css
+++ b/anchor/root/css/base.css
@@ -83,7 +83,7 @@ img {
 	position: absolute;
 	bottom: 50px;
 	right: 20px;
-	width: 900px; height:500px;
+	width: 1100px; height:500px;
 	border-radius: 5px 5px 0 0;
 	opacity: 0.85;
 	background-color: #333333;
@@ -93,9 +93,60 @@ img {
 	padding: 5px;
 }
 
+#console-sidebar {
+	width: 180px;
+	height: 100%;
+	float: left;
+}
+
+.console-nodeselector-left {
+	width: 90px; height: 25px;
+	float: left;
+	cursor: pointer;
+	background-color: #cccccc;
+}
+
+.console-nodeselector-right {
+	width: 90px; height: 25px;
+	float: right;
+	cursor: pointer;
+	background-color: #cccccc;
+}
+
+.console-nodeselector {
+	width: 185px; height: 25px;
+	margin: 10px auto;
+	padding-top: 5px;
+	clear: both;
+	border-radius: 3px;
+	color: #000000;
+	font-weight: bold;
+	text-align: center;
+	cursor: pointer;
+	background-position: left center;
+	background-repeat: no-repeat; 
+}
+.console-nodeselector .id {
+	font-weight: normal;
+}
+.console-nodeselector:hover {
+	background-color: #fff;
+}
+#console-sidebar .active {
+	background-color: #cccccc;
+}
+#console-sidebar .passive {
+	background-color: #666666;
+}
+
+#console-mainbar {
+	float: right;
+	width: 900px;
+}
+
 #console-output {
 	border: 0;
-	width: 100%;
+	width: 895px;
 	height: 400px;
 	color: #eeeeee;
 	background-color: #111111;
@@ -113,3 +164,5 @@ img {
 	font-family: "Lucida Console", Monaco, monospace;	
 
 }
+
+
