Added node popups and reporter grouping for the console

--- a/anchor/views/index.html
+++ b/anchor/views/index.html
@@ -62,12 +62,21 @@
       <div id="console">
         <div id="console-inner">
           <div id="console-sidebar">
-            Select Nodes to communicate with:
+            <div id="console-stations">
+              Available Stations:
+            </div>
+            <div id="console-reporters">
+              Select reporters to command:
+            </div>
           </div>
           <div id="console-mainbar">
             <textarea id="console-output"></textarea>
             <input id="console-input" type="text" />
-            <button id="console-send" value="Send" />
+            <button id="console-send">Send</button>
+            <div id="console-shortcuts">
+              <button id="console-sc-attack">Attack!</button>
+              <button id="console-sc-trail">Trail</button>
+            </div>
           </div>
         </div>
       </div>
