--- a/anchor/root/css/base.css
+++ b/anchor/root/css/base.css
@@ -22,7 +22,7 @@ img {
 	height: 100px;	
 }
 
-#head img {
+#layout-head img {
 	float: left;
 }
 
@@ -32,14 +32,37 @@ img {
 
 /* Page Main Window ******************************************************************************/
 #layout-cont {
-}
-#tvscreen {
 	position: absolute;
 	top: 100px;
 	left: 0;
 	bottom: 50px;
 	right: 0;
+}
+#tvscreen {
+	width: 100%; height: 100%;
 	background-color: #101010;
+}
+
+#tvscreen div.popup {
+	width: 80px;
+	padding: 5px;
+	margin: 0 0 0 15px;
+	position: absolute;
+	display: inline-block;
+	border-bottom-right-radius: 10px;
+	border-bottom-left-radius: 10px;
+	background-color: #cacaca;
+	color: #000000;
+	opacity: 0.6;
+}
+#tvscreen div.popup > ul {
+	margin: 0 0 0 5px;
+	padding: 0 0 0 3px;
+	list-style: none;
+}
+#tvscreen div.popup > ul > li {
+	margin: 0 0 0 0;
+	padding: 0 0 0 0;
 }
 
 
@@ -99,6 +122,30 @@ img {
 	float: left;
 }
 
+.console-station {
+	margin: 5px 0;
+	border-radius: 3px;
+	background-color: #202020;
+	color: #eeeeee;
+	cursor: pointer;
+	text-align: center;
+	/*
+	-webkit-transform: rotate(-90deg); 
+	-moz-transform: rotate(-90deg);*/
+}
+.console-station:hover {
+	background-color: #2f2f2f;
+}
+.console-station.active {
+	background-color: #414141;
+	color: #000000;
+}
+
+#console-reporters {
+	overflow-y: auto;
+	overflow-x: hidden;
+}
+
 .console-nodeselector-left {
 	width: 90px; height: 25px;
 	float: left;
@@ -119,6 +166,7 @@ img {
 	padding-top: 5px;
 	clear: both;
 	border-radius: 3px;
+	background-color: #666666;
 	color: #000000;
 	font-weight: bold;
 	text-align: center;
@@ -134,9 +182,6 @@ img {
 }
 #console-sidebar .active {
 	background-color: #cccccc;
-}
-#console-sidebar .passive {
-	background-color: #666666;
 }
 
 #console-mainbar {
@@ -163,6 +208,10 @@ img {
 	font-size: 10px;
 	font-family: "Lucida Console", Monaco, monospace;	
 
+}
+
+#console-shortcuts {
+	clear:both;
 }
 
 
