index.html trail button

--- a/anchor/views/index.html
+++ b/anchor/views/index.html
@@ -75,7 +75,7 @@
             <button id="console-send">Send</button>
             <div id="console-shortcuts">
               <button id="console-sc-attack">Attack!</button>
-              <button id="console-sc-trail">Trail</button>
+              <button id="console-sc-trail">TRAIL</button>
             </div>
           </div>
         </div>
